--- a/Naive Bayes/project_latex.tex
+++ b/Naive Bayes/project_latex.tex
@@ -2,6 +2,9 @@
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage{authblk}
+\usepackage{graphicx} 
+\usepackage{float} 
+\usepackage{subfigure} 
 \title{Classifying with probability theory: Naive Bayes Classifier}
 \author[a]{Xinyi Feng}
 \affil[a]{xfeng82@wisc.edu}
@@ -29,29 +32,22 @@ p(c|x)=\frac{p(x|c)p(c)}{p(x)}
 To use naive Bayes on some real-life problems we’ll need to be able to go from a body of text to a list of strings and then a word vector. In this example we’re going to visit the famous use of naïve Bayes: email spam filtering.\\
 We prepared a video for this part.
 
-\section{Warm-up Questions}
-\subsection{We have some grey balls and some black balls, randomly placed into basket A and basket B. How to calculate the probability of a gray stone, given that the unknown stone comes from bucket B？}
-~\\~\\~\\~\\
-\subsection{Misjudged ham mail and spam mail, which is more serious?}
-~\\~\\~\\~\\
-\subsection{How to improve accuracy?}
-~\\~\\~\\~\\
-\section{Main activity}
-\subsection{Choose an email to test if it is spam}
-~\\~\\~\\~\\
-\subsection{Test all emails to calculate the error rate of ham emails and spam emails}
-~\\~\\~\\~\\
-\subsection{If the error rate is not zero, reduce the error rate by modifying the thesaurus}
-~\\~\\~\\~\\
-\subsection{Create a plot, with number of rows of thesaurus as x-axis and error rate as y-axis, showing error rate with 1~7 rows of thesaurus and explain your plot}
-
-\section{Appendix}
-For Warm-up Questions:\\
-p(gray|bucketB)\\
-Misjudging ham mail is more serious since we might miss important mail.\\
-Expand the thesaurus.\\
-For Main activities:\\
-Uncomment the code.
+\section{UI Interface}
+I made a simple UI Interface with Qt designer, PyUIC and Pyinstaller:\\
+\begin{figure}[H]
+\centering 
+\subfigure[Fig1]{
+\label{Fig.sub.1}
+\includegraphics[width=0.45\textwidth]{fig1}}
+\subfigure[Fig2]{
+\label{Fig.sub.2}
+\includegraphics[width=0.45\textwidth]{fig2}}
+\subfigure[Fig3]{
+\label{Fig.sub.3}
+\includegraphics[width=0.45\textwidth]{fig3}}
+\caption{Preview of the software}
+\label{Fig.main}
+\end{figure}
 \end{document}
 
 
